:tada: :bricks: Complete nestjs and typeorm integration

--- a/package.json
+++ b/package.json
@@ -12,6 +12,17 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+    "ts-node": "ts-node --transpile-only",
+    "rdb:migration:generate": "yarn ts-node $(npm bin)/typeorm migration:generate -n",
+    "rdb:migration:run": "yarn ts-node $(npm bin)/typeorm migration:run",
+    "rdb:migration:show": "yarn ts-node $(npm bin)/typeorm migration:show",
+    "rdb:migration:revert": "yarn ts-node $(npm bin)/typeorm migration:revert",
+    "rdb:seed:generate": "yarn ts-node $(npm bin)/typeorm migration:generate -c seed -n",
+    "rdb:seed:run": "yarn ts-node $(npm bin)/typeorm migration:generate:run -c seed",
+    "rdb:seed:revert": "yarn ts-node $(npm bin)/typeorm migration:generate:revert -c seed",
+    "rdb:schema:drop": "yarn ts-node $(npm bin)/typeorm schema:drop",
+    "rdb:remake": "yarn rdb:schema:drop && yarn rdb:migration:run && yarn rdb:seed:run",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -31,7 +42,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
-    "typeorm": "^0.3.7",
+    "typeorm": "0.2.29",
     "zod": "^3.17.10"
   },
   "devDependencies": {
@@ -41,6 +52,7 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
+    "@types/pluralize": "^0.0.29",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
