--- a/package.json
+++ b/package.json
@@ -43,19 +43,22 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^6.0.5",
     "@nestjs/typeorm": "^9.0.0",
+    "bcrypt": "^5.0.1",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6",
-    "typeorm": "0.2.29",
+    "rxjs": "^7",
+    "typeorm": "0.3.8",
     "zod": "^3.17.10"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^7.6.15",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^14.14.36",
     "@types/pluralize": "^0.0.29",
     "@types/supertest": "^2.0.10",
@@ -79,7 +82,27 @@
       "json",
       "ts"
     ],
-    "moduleDirectories": ["node_modules", "src"],
+    "moduleDirectories": [
+      "node_modules",
+      "src"
+    ],
+    "moduleNameMapper": {
+      "@domain/(.*)$": [
+        "<rootDir>/domain/$1"
+      ],
+      "@infrastructure/(.*)$": [
+        "<rootDir>/infrastructure/$1"
+      ],
+      "@usecase/(.*)$": [
+        "<rootDir>/usecase/$1"
+      ],
+      "@utils/(.*)$": [
+        "<rootDir>/utils/$1"
+      ],
+      "@constants/(.*)$": [
+        "<rootDir>/constants/$1"
+      ]
+    },
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
