:pushpin: Use nestjs 7.0.0 and typeorm 0.2.25

--- a/package.json
+++ b/package.json
@@ -38,16 +38,18 @@
   },
   "dependencies": {
     "@nestjs/class-transformer": "^0.4.0",
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/swagger": "^6.0.5",
-    "@nestjs/typeorm": "^9.0.0",
+    "@nestjs/common": "^7.0.0",
+    "@nestjs/core": "^7.0.0",
+    "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/swagger": "^4.5.12",
+    "@nestjs/typeorm": "^7.1.0",
     "bcrypt": "^5.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7",
+    "swagger-ui-express": "4.1.4",
     "typeorm": "0.3.8",
     "zod": "^3.17.10"
   },
