--- a/package.json
+++ b/package.json
@@ -45,7 +45,11 @@
     "@nestjs/swagger": "^4.5.12",
     "@nestjs/typeorm": "^7.1.0",
     "bcrypt": "^5.0.1",
+    "dayjs": "^1.11.5",
+    "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "log4js": "^6.6.1",
+    "maskdata": "^1.1.10",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
