--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "rdb:test:remake": "NEWANIGRAM_RDB_DATABASE=newanigram_test yarn rdb:schema:drop && yarn rdb:migration:run && yarn rdb:seed:run",
     "rdb:test:migration:revert": "NEWANIGRAM_RDB_DATABASE=newanigram_test yarn ts-node $(npm bin)/typeorm migration:revert",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "NEWANIGRAM_RDB_DATABASE=newanigram_test jest --detectOpenHandles",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
