--- a/package.json
+++ b/package.json
@@ -44,12 +44,15 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.5.12",
     "@nestjs/typeorm": "^7.1.0",
+    "aws-sdk": "^2.1218.0",
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "dayjs": "^1.11.5",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "log4js": "^6.6.1",
     "maskdata": "^1.1.10",
+    "md5": "^2.3.0",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -66,6 +69,7 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/md5": "^2.3.2",
     "@types/node": "^14.14.36",
     "@types/pluralize": "^0.0.29",
     "@types/supertest": "^2.0.10",
@@ -74,6 +78,7 @@
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "supertest": "^6.1.3",
@@ -103,12 +108,19 @@
       "@usecase/(.*)$": [
         "<rootDir>/usecase/$1"
       ],
+      "@view/(.*)$": [
+        "<rootDir>/view/$1"
+      ],
+      "@config/(.*)$": [
+        "<rootDir>/config/$1"
+      ],
       "@utils/(.*)$": [
         "<rootDir>/utils/$1"
       ],
       "@constants/(.*)$": [
         "<rootDir>/constants/$1"
-      ]
+      ],
+      ".+\\.(jpeg)$": "identity-obj-proxy"
     },
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
