--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ executors: # Specify execution environment
     docker:
       - image: mhart/alpine-node:14.16.0
       - image: mysql:8.0.30
+      - image: cimg/base:2022.06
         environment:
           MYSQL_DATABASE: newanigram_test
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
