--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,8 @@ executors: # Specify execution environment
       - image: cimg/mysql:8.0
         environment:
           MYSQL_DATABASE: newanigram_test
-          MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          MYSQL_ROOT_USER: root
+          MYSQL_ROOT_PASSWORD: root
 
 commands: # Define steps as map to be executed in job
   project-setup:
