:rotating_light: Add husky, prettier, lint

--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "start:debug": "nest start --debug --watch",
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "ts-node": "ts-node --transpile-only",
+    "lint:check": "eslint \"{src,test}/**/*.ts\"",
+    "lint:fix": "eslint \"{src,test}/**/*.ts\" --fix",
+    "prettier:check": "yarn prettier --check \"{src,test}/**/*.ts\"",
+    "prettier:fix": "yarn prettier --write \"{src,test}/**/*.ts\"",
     "rdb:migration:generate": "yarn ts-node $(npm bin)/typeorm migration:generate -n",
     "rdb:migration:run": "yarn ts-node $(npm bin)/typeorm migration:run",
     "rdb:migration:show": "yarn ts-node $(npm bin)/typeorm migration:show",
@@ -30,7 +34,6 @@
     "rdb:test:remake": "NEWANIGRAM_RDB_DATABASE=newanigram_test yarn rdb:schema:drop && yarn rdb:migration:run && yarn rdb:seed:run",
     "rdb:test:migration:revert": "NEWANIGRAM_RDB_DATABASE=newanigram_test yarn ts-node $(npm bin)/typeorm migration:revert",
     "start:prod": "node dist/main",
-    "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "NEWANIGRAM_RDB_DATABASE=newanigram_test jest --detectOpenHandles",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -72,10 +75,12 @@
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.1.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "husky": "^8.0.2",
     "jest": "^26.6.3",
-    "prettier": "^2.2.1",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.4",
     "ts-loader": "^8.0.18",
