--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@types/jest": "^26.0.22",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/md5": "^2.3.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "^14.14.36",
     "@types/pluralize": "^0.0.29",
     "@types/supertest": "^2.0.10",
@@ -81,8 +82,8 @@
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "identity-obj-proxy": "^3.0.0",
     "husky": "^8.0.2",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
